<resources>
    <string name="app_name">BodyFatControl</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="email_address">email address</string>
    <string name="email_hint">you@gmail.com</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account.\nRegister Here</string>
    <string name="new_user_signup">New User Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account.\nLogin Here</string>
</resources>
